terraform/main.tf
data "aws_ami" "ubuntu" {

  most_recent = true

  owners = ["099720109477"]

  filter {

    name = "name"

    values = [
      "ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"
    ]
  }

}

resource "aws_instance" "secureapp" {

  ami = data.aws_ami.ubuntu.id

  instance_type = var.instance_type

  key_name = var.key_name

  vpc_security_group_ids = [
    aws_security_group.secureapp_sg.id
  ]

  user_data = file("${path.module}/userdata.sh")

  tags = {
    Name = "SecureApp"
  }

}
